--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,4 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 80px;
-  position: absolute;
-  top: 6rem;
-  left: 28rem;
-}
-
-.App-logo-1 {
-  animation: App-logo-spin-1 infinite 20s linear;
-}
-
-.App-logo-2 {
-  animation: App-logo-spin-2 infinite 20s linear;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin-1 {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-@keyframes App-logo-spin-2 {
-  from { transform: rotate(360deg); }
-  to { transform: rotate(0deg); }
+  font-family: 'Poppins', sans-serif;
 }
