Use syled components theme and refactor file names

--- a/public/style.css
+++ b/public/style.css
@@ -49,6 +49,10 @@ table {
  * My Defaults
  **********************************************************/
 
+html {
+	font-size: 16px;
+}
+
 body {
   margin: 0;
   padding: 0;
