--- a/public/style.css
+++ b/public/style.css
@@ -51,10 +51,15 @@ table {
 
 html {
 	font-size: 16px;
+	box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+	font-family: sans-serif;
 }
